# fixed-polynomial

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  tests.rs
