[package]
name = "fixed-polynomial"
authors = "Onyeka Obi"
description = "Polynomial arithmetic functions with compile-time degree checks"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99"
generic-array = "0.14"
num-traits = "0.2"
proptest = "1.1"
typenum = "1.12"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

