[package]
name = "fixed-polynomial"
description = "Polynomial arithmetic functions with compile-time degree checks"
readme = "README.md"
repository = "https://github.com/MavenRain/fixed-polynomial"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
derive_more = "0.99"
generic-array = "0.14"
proptest = "1.1"
typenum = "1.12"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

